update index.html: change root-relative to relative paths

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>VODpile - GSL 2014 VOD browsing UI</title>
-    <link rel="stylesheet" href="/style.css"></link>
-    <link rel="stylesheet" href="/jquery-ui-1.10.4.custom.min.css"></link>
+    <link rel="stylesheet" href="style.css"></link>
+    <link rel="stylesheet" href="jquery-ui-1.10.4.custom.min.css"></link>
   </head>
   <body>
     <div id="main">
@@ -21,9 +21,9 @@
       <!-- uncomment the following line to develop against demo data
            instead of hitting twitch's servers every time -->
       <!-- <script src="/vodpile-demodata.js"></script> -->
-      <script src="/vodpile.js"></script>
+      <script src="vodpile.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-      <script src="/jquery-ui-1.10.4.custom.min.js"></script>
+      <script src="jquery-ui-1.10.4.custom.min.js"></script>
       <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
       <script>
         Twitch.init({clientId: '51pg5k2js91d17hjl0cni27nytkmwo8'},
