update index.html: fix more info link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="main">
       <div id="about">
         <h1>VODpile</h1>
-        <p>An alternative UI for browsing <a href="http://www.gomexp.com/">GOM eXP's</a> 2014 Starcraft 2 <a href="http://twitch.tv">Twitch.tv</a> VOD archive. <a href="https://keunwoo.github.com/vodpile/blob/master/README.md">More info...</a></p>
+        <p>An alternative UI for browsing <a href="http://www.gomexp.com/">GOM eXP's</a> 2014 Starcraft 2 <a href="http://twitch.tv">Twitch.tv</a> VOD archive. <a href="https://github.com/keunwoo/vodpile/blob/gh-pages/README.md">More info...</a></p>
       </div>
 
       <div id="nav">
